# actix-web-template

./: .dockerignore  .env.example  .env.production  .gitignore  CICD.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  MIGRATIONS.md  OBSERVABILITY.md  PERFORMANCE.md  README.md  TESTING.md  TROUBLESHOOTING.md  TUTORIAL_PLAN.md  deny.toml  docker-compose.yml  project_plan.md  requirements.md
.github/workflows/: deploy.yml  lint.yml  release.yml  test.yml
migration/: Cargo.toml
migration/src/: lib.rs  m20250109_000001_create_memos_table.rs
observability/: prometheus.yml
observability/grafana/dashboards/: memos-app.json
observability/grafana/provisioning/dashboards/: dashboards.yml
observability/grafana/provisioning/datasources/: datasources.yml
src/: lib.rs  main.rs  state.rs
src/config/: settings.rs
src/docs/: mod.rs  openapi.rs
src/dto/: memo_dto.rs  mod.rs
src/entities/: memos.rs  prelude.rs
src/error/: app_error.rs  mod.rs
src/handlers/: health.rs  memos.rs  metrics.rs  mod.rs  test_dto.rs  test_errors.rs  test_repository.rs  test_service.rs  web.rs
src/middleware/: mod.rs  rate_limit.rs  security_headers.rs
src/observability/: metrics.rs  tracing.rs
src/repository/: memo_repository.rs
src/services/: memo_service.rs
src/utils/: mod.rs  sanitize.rs  tracing.rs
static/css/: style.css
templates/: base.html
templates/components/: memo_form.html  memo_item.html  memo_list.html
templates/pages/: error.html  index.html
templates/partials/: footer.html  header.html
tests/: api_tests.rs  repository_tests.rs  service_tests.rs  web_tests.rs
tests/common/: fixtures.rs  mod.rs
tutorial/: README.md  chapter-00.md  chapter-01.md  chapter-02.md
